Веб-фронт, задача: установка контекста

--- a/api/src/main/webapp/static/assets/css/app.css
+++ b/api/src/main/webapp/static/assets/css/app.css
@@ -17,6 +17,11 @@
     padding-bottom: 8px;
 }
 
-.btn {
-    margin-top: 6px;
+.form-group {
+    margin-top: 1px;
 }
+
+/*.btn {*/
+/*    margin-top: 5px;*/
+/*}*/
+
