--- a/frontend/src/assets/app.css
+++ b/frontend/src/assets/app.css
@@ -7,7 +7,7 @@
 }
 
 [class*="col-"] {
-    background-color: #eee;
+    background-color: #ddd;
     border-right: 2px solid #fff;
     border-bottom: 2px solid #fff;
 }
